mutants.out/log/crates__sandbox__src__lib.rs_line_344_col_9.log

*** crates/sandbox/src/lib.rs:344:9: replace SandboxRunner::run -> Result<SandboxResult, SandboxError> with Ok(Default::default())

*** mutation diff:
--- crates/sandbox/src/lib.rs
+++ replace SandboxRunner::run -> Result<SandboxResult, SandboxError> with Ok(Default::default())
@@ -336,63 +336,17 @@
         }
     }
 
     pub fn run(
         &self,
         command: &CommandSpec,
         policy: &SandboxPolicy,
     ) -> Result<SandboxResult, SandboxError> {
-        let plan = self.compile(command, policy)?;
-
-        if policy.preset != SandboxPreset::DangerFullAccess && !plan.backend.available {
-            return Err(SandboxError::BackendUnavailable {
-                backend: plan.backend.kind,
-                platform: plan.backend.platform,
-                detail: plan.backend.detail,
-            });
-        }
-
-        let mut process = Command::new(&plan.program);
-        process.args(&plan.args);
-        process.envs(&plan.env);
-
-        if let Some(current_dir) = &plan.current_dir {
-            process.current_dir(current_dir);
-        }
-
-        let output = if let Some(stdin) = &plan.stdin {
-            process.stdin(Stdio::piped());
-            process.stdout(Stdio::piped());
-            process.stderr(Stdio::piped());
-
-            let mut child = process
-                .spawn()
-                .map_err(|error| SandboxError::Io(error.to_string()))?;
-
-            if let Some(child_stdin) = child.stdin.as_mut() {
-                child_stdin
-                    .write_all(stdin.as_bytes())
-                    .map_err(|error| SandboxError::Io(error.to_string()))?;
-            }
-
-            child
-                .wait_with_output()
-                .map_err(|error| SandboxError::Io(error.to_string()))?
-        } else {
-            process
-                .output()
-                .map_err(|error| SandboxError::Io(error.to_string()))?
-        };
-
-        Ok(SandboxResult {
-            stdout: String::from_utf8_lossy(&output.stdout).into_owned(),
-            stderr: String::from_utf8_lossy(&output.stderr).into_owned(),
-            exit_code: output.status.code(),
-        })
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 fn backend_report(platform: Platform, available: bool) -> BackendReport {
     let (kind, detail) = match platform {
         Platform::Macos => (
             BackendKind::MacosSeatbelt,
             "requires /usr/bin/sandbox-exec and generated SBPL policy",


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=sandbox@0.1.0
       Dirty sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/crates/sandbox): couldn't read metadata for file `target/debug/deps/libsandbox-3854b11f8daf2006.rlib`
   Compiling sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/crates/sandbox)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a114b1d7655828cd -C extra-filename=-84da628582973993 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2b325062dbe2c508 -C extra-filename=-3854b11f8daf2006 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps`
warning: unused import: `std::process::Command`
 --> crates/sandbox/src/lib.rs:6:5
  |
6 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::process::Stdio`
 --> crates/sandbox/src/lib.rs:7:5
  |
7 | use std::process::Stdio;
  |     ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `SandboxResult: Default` is not satisfied
   --> crates/sandbox/src/lib.rs:344:12
    |
344 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `SandboxResult`
    |
help: consider annotating `SandboxResult` with `#[derive(Default)]`
    |
233 + #[derive(Default)]
234 | pub struct SandboxResult {
    |

warning: unused import: `std::io::Write`
 --> crates/sandbox/src/lib.rs:3:5
  |
3 | use std::io::Write;
  |     ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `sandbox` (lib test) generated 3 warnings
error: could not compile `sandbox` (lib test) due to 1 previous error; 3 warnings emitted

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a114b1d7655828cd -C extra-filename=-84da628582973993 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `sandbox` (lib) generated 3 warnings (3 duplicates)
error: could not compile `sandbox` (lib) due to 1 previous error; 3 warnings emitted

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2b325062dbe2c508 -C extra-filename=-3854b11f8daf2006 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-U5FVzE.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
